forced overflow to be visible on .site-header .wrapper in mobile size to fix IE bug

--- a/Website/frontend/assets/css/_sass/partials/_header.scss
+++ b/Website/frontend/assets/css/_sass/partials/_header.scss
@@ -5,6 +5,9 @@
 		@extend .clearfix;
 		position: relative;
 		overflow: initial;
+		@include breakpoint(small) {
+					overflow: visible;
+				}
 	}
 	.logo {
 		@include image-replace("logo-horizontal.png");
